# py-practice-projs

./: .gitignore  125-python-projects-roadmap.md  AGENT_HANDOFF.md
Level 1/: CHECKLIST.md  super-calc.py
Level 1/01-hello-world-super-calculator/: super-calc.py
Level 1/03-temperature-converter/: SPEC.md
Level 1/04-unit-converter/: SPEC.md
Level 1/05-rock-paper-scissors/: SPEC.md
Level 1/08-alarm-countdown-timer/: SPEC.md
Level 1/09-to-do-list/: SPEC.md
Level 1/10-address-book/: SPEC.md
Level 1/11-word-count/: SPEC.md
Level 1/12-dice-roller-simulator/: SPEC.md
Level 1/13-stopwatch/: SPEC.md
Level 1/15-password-generator/: SPEC.md
Level 1/16-hangman/: SPEC.md
Level 1/17-quiz-app-from-json/: SPEC.md
Level 1/18-string-templater-for-emails/: SPEC.md
Level 1/21-bmi-calorie-calculator/: SPEC.md
Level 1/22-simple-interest-compound-calculator/: SPEC.md
Level 1/26-text-adventure-mini-game/: SPEC.md
Level 2/: CHECKLIST.md
Level 3/: CHECKLIST.md
Level 4/: CHECKLIST.md
Level 5/: CHECKLIST.md
Levels/: PROGRESSION_SUMMARY.md  REVISION_REPORT.md
Levels/Level 1/: Level1-Checklist-Spec-Sheets-v2.md  setup.py
Levels/Level 1/01-hello-world-super-calculator/: AGENTS.md  CHECKLIST.md  README.md  SPEC.md  calculator_history.json  hello_world_super_calculator.py  main.py  pyproject.toml  super-calc.py  test_calculator.py
Levels/Level 1/01-hello-world-super-calculator/super_calc/: __init__.py  calculator.py  cli.py  expr.py  models.py  persistence.py
Levels/Level 1/02-guess-the-number/: CHECKLIST.md  README.md  (+3 more)
Levels/Level 2/: CHECKLIST.md  README.md  requirements.txt  sample_addresses.csv
Levels/Level 2/13-email-sender/: .coverage  .gitignore  CHECKLIST.md  README.md  SPEC.md  pyproject.toml  requirements.txt  sample_recipients.csv  sample_template.html  setup.py
Levels/Level 2/13-email-sender/Levels/Level 2/13-email-sender/email_sender/: web.py
Levels/Level 2/13-email-sender/email_sender/: __init__.py  __main__.py  auth_service.py  core.py  gmail_api.py  main.py  sheets_sync.py  storage.py  tracking.py  utils.py  web.py
Levels/Level 2/13-email-sender/email_sender/templates/: base.html  dashboard.html
Levels/Level 2/13-email-sender/email_sender/templates/attachments/: manage.html
Levels/Level 2/13-email-sender/email_sender/templates/campaigns/: detail.html  import.html  list.html  new.html  preview.html  send.html  sending.html
Levels/Level 2/13-email-sender/email_sender/templates/signatures/: form.html  list.html
Levels/Level 2/13-email-sender/email_sender/web/: __init__.py  attachments.py  campaigns.py  signatures.py  tracking.py
Levels/Level 2/13-email-sender/tests/: __init__.py  test_email_sender.py  test_new_features.py  test_storage.py  test_templates.py
Levels/Level 3/: CHECKLIST.md
Levels/Level 3/01-flask-crud-to-do/: .coverage  CHECKLIST.md  README.md  SPEC.md  pyproject.toml  requirements.txt  run.py  spec-requirements-checklist.md
Levels/Level 3/01-flask-crud-to-do/app/: __init__.py
Levels/Level 3/01-flask-crud-to-do/app/models/: __init__.py  audit_log.py  task.py  task_attachment.py  task_dependency.py  task_note.py  task_template.py  time_entry.py  user.py
Levels/Level 3/01-flask-crud-to-do/app/routes/: __init__.py  auth.py  main.py  tasks.py
Levels/Level 3/01-flask-crud-to-do/app/services/: auth_service.py  stats_service.py  task_service.py
Levels/Level 3/01-flask-crud-to-do/app/static/css/: components.css  dashboard.css  design-system.css  main.css
Levels/Level 3/01-flask-crud-to-do/app/static/js/: dashboard.js  main.js
Levels/Level 3/01-flask-crud-to-do/app/templates/: base.html  index.html
Levels/Level 3/01-flask-crud-to-do/app/templates/auth/: login.html  register.html
Levels/Level 3/01-flask-crud-to-do/app/templates/errors/: 404.html  500.html
Levels/Level 3/01-flask-crud-to-do/app/templates/tasks/: board.html  create.html  detail.html  edit.html  list.html  templates.html
Levels/Level 3/01-flask-crud-to-do/app/utils/: decorators.py  exceptions.py
Levels/Level 3/01-flask-crud-to-do/docs/: ARCHITECTURE.md
Levels/Level 3/01-flask-crud-to-do/instance/: todo_app.db
Levels/Level 3/01-flask-crud-to-do/migrations/versions/: 030829ba1a2f_add_status_column_backfill.py  20240306_advanced_features.py  f3528f5c312f_add_category_to_tasks.py
Levels/Level 3/01-flask-crud-to-do/tests/: conftest.py
Levels/Level 3/01-flask-crud-to-do/tests/e2e/: test_user_flows.py
Levels/Level 3/01-flask-crud-to-do/tests/integration/: test_auth_routes.py  test_task_routes.py
Levels/Level 3/01-flask-crud-to-do/tests/unit/: test_auth_service.py  test_category.py  test_models.py  test_stats_service.py  test_task_service.py
Levels/Level 4/: CHECKLIST.md
Levels/Level 5/: CHECKLIST.md
scripts/: generate_checklists.py  generate_checklists_levels_2_to_5.py  generate_level1_checklists.py  split_level1_specs.py  split_level2_specs.py  split_level3_specs.py  split_level4_specs.py  split_level5_specs.py
(+1111 files in other folders)
