[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-calc"
version = "0.1.0"
description = "Super Calculator CLI (expression-based, with history, decimal mode, and formatting)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
keywords = ["calculator", "cli", "expression", "decimal", "history"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "License :: Other/Proprietary License",
]
license = { text = "No specific license implied (learning/practice)" }

[project.scripts]
super-calc = "main:main"

[tool.setuptools]
packages = ["super_calc"]
py-modules = ["main"]
